ws-03 tasks are implemented
